# zeddihub-teamspeak-pokebot

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
src/: custom_dialog.cpp  custom_dialog.h  plugin.cpp  poke_engine.cpp  poke_engine.h  presets.h  zh_brand.h
